--- a/game2d/game2d.vcxproj.filters
+++ b/game2d/game2d.vcxproj.filters
@@ -188,5 +188,8 @@
     <ClInclude Include="..\gfc\include\miniz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="testentity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
