--- a/game2d/game2d.vcxproj
+++ b/game2d/game2d.vcxproj
@@ -171,6 +171,8 @@
     <ClCompile Include="..\src\gf2d_draw.c" />
     <ClCompile Include="..\src\gf2d_graphics.c" />
     <ClCompile Include="..\src\gf2d_sprite.c" />
+    <ClCompile Include="..\src\player.c" />
+    <ClCompile Include="..\src\testentity.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\gfc\include\gfc_audio.h" />
@@ -202,7 +204,8 @@
     <ClInclude Include="..\include\gf2d_draw.h" />
     <ClInclude Include="..\include\gf2d_graphics.h" />
     <ClInclude Include="..\include\gf2d_sprite.h" />
-    <ClInclude Include="testentity.h" />
+    <ClInclude Include="..\include\player.h" />
+    <ClInclude Include="..\include\testentity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
