--- a/game2d/game2d.vcxproj.filters
+++ b/game2d/game2d.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClCompile Include="..\gfc\src\miniz.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\testentity.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\player.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\gf2d_draw.h">
@@ -188,7 +194,10 @@
     <ClInclude Include="..\gfc\include\miniz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="testentity.h">
+    <ClInclude Include="..\include\testentity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
