--- a/game2d/game2d.vcxproj
+++ b/game2d/game2d.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="..\src\gf2d_sprite.c" />
     <ClCompile Include="..\src\player.c" />
     <ClCompile Include="..\src\testentity.c" />
+    <ClCompile Include="..\src\world.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\gfc\include\gfc_audio.h" />
@@ -206,6 +207,7 @@
     <ClInclude Include="..\include\gf2d_sprite.h" />
     <ClInclude Include="..\include\player.h" />
     <ClInclude Include="..\include\testentity.h" />
+    <ClInclude Include="..\include\world.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
