--- a/game2d/game2d.vcxproj.filters
+++ b/game2d/game2d.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="..\src\world.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\camera.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\gf2d_draw.h">
@@ -204,6 +207,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\world.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
