--- a/game2d/game2d.vcxproj
+++ b/game2d/game2d.vcxproj
@@ -168,10 +168,12 @@
     <ClCompile Include="..\gfc\src\gfc_vector.c" />
     <ClCompile Include="..\gfc\src\miniz.c" />
     <ClCompile Include="..\src\camera.c" />
+    <ClCompile Include="..\src\enemyentity.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\gf2d_draw.c" />
     <ClCompile Include="..\src\gf2d_graphics.c" />
     <ClCompile Include="..\src\gf2d_sprite.c" />
+    <ClCompile Include="..\src\platform.c" />
     <ClCompile Include="..\src\player.c" />
     <ClCompile Include="..\src\testentity.c" />
     <ClCompile Include="..\src\world.c" />
@@ -204,9 +206,11 @@
     <ClInclude Include="..\gfc\simple_json\include\simple_json_value.h" />
     <ClInclude Include="..\gfc\simple_logger\include\simple_logger.h" />
     <ClInclude Include="..\include\camera.h" />
+    <ClInclude Include="..\include\enemyentity.h" />
     <ClInclude Include="..\include\gf2d_draw.h" />
     <ClInclude Include="..\include\gf2d_graphics.h" />
     <ClInclude Include="..\include\gf2d_sprite.h" />
+    <ClInclude Include="..\include\platform.h" />
     <ClInclude Include="..\include\player.h" />
     <ClInclude Include="..\include\testentity.h" />
     <ClInclude Include="..\include\world.h" />
